[package]
name = "nft_stickers"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_stickers"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"]}
mpl-token-metadata = { version = "1.2.7", features = ["no-entrypoint"] }
solana-program = "1.9.6"
borsh = "~0.9.2"
anchor-spl = "=0.24.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
metaplex = { version = "0.0.1", features = ["no-entrypoint"] }

